<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.brianmote.mileagelogger.Activities.CreatePlaceActivity"
    tools:showIn="@layout/activity_create_place">

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_location"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <fragment
        android:id="@+id/start_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startLabel"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_fragment"
        android:text="@string/end_location"/>

    <fragment
        android:id="@+id/destination_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/start_fragment"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/calcDistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination_fragment"
        android:text="@string/calc_miles"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcDistBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:visibility="invisible"/>



</RelativeLayout>

